data is properly exported but can't seem to get the railtie working

--- a/test/fixture/config.yml
+++ b/test/fixture/config.yml
@@ -7,6 +7,6 @@ translations:
   - file: "test/tmp/client.js"
     only:
       - app
-      - activerecord.attributes
+      - active_record.attributes
 
   - file: "test/tmp/all.js"
